--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:prod": "node index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,13 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
+    "forwarded": "^0.2.0",
     "google-auth-library": "^8.7.0",
+    "ipaddr.js": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-check-expiration": "^1.0.5",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.8.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.6.1"
-  },
-  "devDependencies": {}
+  }
 }
